// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RightContent should render with empty content 1`] = `
<body>
  <div>
    <div
      class="ant-col ant-col-8 css-18hn8eo"
      style="background: rgba(255, 255, 255, 0.7);"
    >
      <div
        class="ant-space ant-space-vertical"
      >
        <div
          class="ant-space-item"
          style="margin-bottom: 16px;"
        >
          <div
            class="ant-space ant-space-vertical"
          >
            <div
              class="ant-space-item"
              style="margin-bottom: 8px;"
            >
              <div
                class="css-19v9tj3"
              >
                <div
                  class="probability-number"
                  style="background-clip: text;"
                >
                  Best
                </div>
                <svg
                  height="30"
                  version="1.1"
                  width="30"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0 C3.61477175 1.49801352 5.68620463 3.57537417 8.25 6.5 C8.95640625 7.2940625 9.6628125 8.088125 10.390625 8.90625 C12 11 12 11 12 13 C10.8553125 13.0309375 10.8553125 13.0309375 9.6875 13.0625 C8.800625 13.371875 7.91375 13.68125 7 14 C5.95281202 16.31254012 4.95653635 18.6485148 4 21 C0.03489054 25.30497599 -3.40593489 25.62074135 -9 26 C-9 21.52386206 -8.51156813 21.31526994 -6 18 C-5.28566879 15.35065178 -5.28566879 15.35065178 -5 13 C-6.65 13 -8.3 13 -10 13 C-8.56501627 9.79111679 -6.78256013 7.42193016 -4.4375 4.8125 C-3.81746094 4.11769531 -3.19742187 3.42289062 -2.55859375 2.70703125 C-1.72141231 1.79011824 -0.8779528 0.8779528 0 0 Z "
                    fill="#FCAF19"
                    transform="translate(14,2)"
                  />
                </svg>
              </div>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="ant-typography ant-typography-secondary"
              >
                性能提升
              </span>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-bottom: 16px;"
        >
          <div
            class="analysis-chart"
          >
            <svg
              class="icon"
              height="60"
              p-id="10029"
              version="1.1"
              viewBox="0 0 1024 1024"
              width="60"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M316.26615847 393.13534991l-171.08627078 431.74650593c-4.47869794 11.46546674 6.80762185 22.93093497 18.27308861 18.2730886l431.74650593-173.23604626c9.49483971-3.76210707 11.82376365-15.94416613 4.65784637-23.11008192L339.37624189 388.29835655c-7.16591726-7.16591726-19.34797634-4.65784638-23.11008342 4.83699336z"
                fill="#FFB20D"
                p-id="10030"
              />
              <path
                d="M217.55565124 555.4433718m-33.14236701 0a33.14236701 33.14236701 0 1 0 66.28473401 0 33.14236701 33.14236701 0 1 0-66.28473401 0Z"
                fill="#9D11F9"
                p-id="10031"
              />
              <path
                d="M233.32066894 319.6847001m-34.9338456 0a34.93384558 34.93384558 0 1 0 69.86769118 0 34.93384558 34.93384558 0 1 0-69.86769118 0Z"
                fill="#3880F2"
                p-id="10032"
              />
              <path
                d="M547.72528216 224.19885461m-30.27600068 0a30.27599921 30.27599921 0 1 0 60.55199989 0 30.27599921 30.27599921 0 1 0-60.55199989 0Z"
                fill="#F44A49"
                p-id="10033"
              />
              <path
                d="M771.66019169 789.94801026m-65.38899472 0a65.38899325 65.38899325 0 1 0 130.77798796 0 65.38899325 65.38899325 0 1 0-130.77798796 0Z"
                fill="#47D8AB"
                p-id="10034"
              />
              <path
                d="M799.60726845 501.34069831m-37.26276951 0a37.2627695 37.2627695 0 1 0 74.52553754 0 37.2627695 37.2627695 0 1 0-74.52553754 0Z"
                fill="#F44A49"
                p-id="10035"
              />
              <path
                d="M653.78085511 493.27904176m-29.20111295 0a29.20111148 29.20111148 0 1 0 58.40222441 0 29.20111148 29.20111148 0 1 0-58.40222441 0Z"
                fill="#F44A49"
                p-id="10036"
              />
              <path
                d="M354.42466728 492.02500559c-5.55358566 0-11.10717133-2.5080709-14.69012999-7.16591728-6.27017797-8.06165655-4.83699334-19.8854202 3.40381166-26.15559673 46.04101693-35.47128945 69.68854421-74.52553756 70.40513506-115.72956109 1.25403617-73.80894671-70.22598806-134.00264972-70.94257891-134.71924204-7.88250812-6.6284734-8.95739584-18.27308859-2.5080709-26.15559668 6.6284734-7.88250812 18.27308859-8.95739584 26.15559672-2.50807091 3.58295863 2.86636631 85.81185733 72.01746666 84.37867415 163.74120505-0.89573929 53.20693419-29.38025991 101.93517044-84.91611804 144.75152561-3.22466321 2.68721935-7.34506572 3.94125405-11.28631975 3.94125407z"
                fill="#3880F2"
                p-id="10037"
              />
              <path
                d="M374.31008748 669.02315889c-4.65784638 0-9.1365443-1.79147858-12.89864991-5.01614178-7.52421269-7.16591726-7.70336114-18.81053247-0.71659233-26.33474517 1.61233162-1.79147858 161.23313563-166.24927742 356.32522763-27.94707675 8.41995199 5.91188108 10.39058049 17.55649628 4.47869793 25.97644826-5.91188108 8.41995199-17.55649628 10.39058049-25.97644826 4.4786994-169.11564374-119.84996362-302.04340571 17.3773493-307.59699284 23.28923039-3.76210707 3.58295863-8.77824887 5.55358566-13.61524222 5.55358565z"
                fill="#F44A49"
                p-id="10038"
              />
              <path
                d="M626.01292532 382.56562244h-78.28764316c-10.21143205 0-18.63138402-8.41995199-18.6313855-18.63138401s8.41995199-18.63138402 18.6313855-18.6313855h78.28764316c20.96030794 0 38.15850879-17.01905241 38.1585088-38.1585088v-37.8002119c0-41.56231899 33.85895785-75.42127683 75.4212783-75.42127831 17.73564473 0 33.50066243-12.5403545 37.26276803-30.09685077l4.4786994-20.60201252c2.14977548-10.03228359 12.00291061-16.48161002 22.21434266-14.15268608 10.03228359 2.14977548 16.48161002 12.18205906 14.15268609 22.21434264l-4.47869793 20.60201252c-7.52421269 34.39640172-38.51680422 59.29796371-73.62979825 59.29796372-20.96030794 0-38.15850879 17.01905241-38.15850879 38.1585088v37.8002119c0 41.56231899-33.67981087 75.42127683-75.42127831 75.42127831z"
                fill="#FFB20D"
                p-id="10039"
              />
            </svg>
            <span>
              恭喜！ 您的SQL查询配置已经非常优秀，无需进一步优化。
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`RightContent should render with error message 1`] = `
<body>
  <div>
    <div
      class="ant-col ant-col-8 css-18hn8eo"
      style="background: rgba(255, 255, 255, 0.7);"
    >
      <div
        class="ant-space ant-space-vertical"
      >
        <div
          class="ant-space-item"
          style="margin-bottom: 16px;"
        >
          <div
            class="ant-space ant-space-vertical"
          >
            <div
              class="ant-space-item"
              style="margin-bottom: 8px;"
            >
              <div
                class="css-19v9tj3"
              >
                <div
                  class="probability-number"
                  style="background-clip: text;"
                >
                  Best
                </div>
                <svg
                  height="30"
                  version="1.1"
                  width="30"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0 C3.61477175 1.49801352 5.68620463 3.57537417 8.25 6.5 C8.95640625 7.2940625 9.6628125 8.088125 10.390625 8.90625 C12 11 12 11 12 13 C10.8553125 13.0309375 10.8553125 13.0309375 9.6875 13.0625 C8.800625 13.371875 7.91375 13.68125 7 14 C5.95281202 16.31254012 4.95653635 18.6485148 4 21 C0.03489054 25.30497599 -3.40593489 25.62074135 -9 26 C-9 21.52386206 -8.51156813 21.31526994 -6 18 C-5.28566879 15.35065178 -5.28566879 15.35065178 -5 13 C-6.65 13 -8.3 13 -10 13 C-8.56501627 9.79111679 -6.78256013 7.42193016 -4.4375 4.8125 C-3.81746094 4.11769531 -3.19742187 3.42289062 -2.55859375 2.70703125 C-1.72141231 1.79011824 -0.8779528 0.8779528 0 0 Z "
                    fill="#FCAF19"
                    transform="translate(14,2)"
                  />
                </svg>
              </div>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="ant-typography ant-typography-secondary"
              >
                性能提升
              </span>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-bottom: 16px;"
        >
          <div
            class="analysis-chart"
          >
            <div
              class="css-1anu5"
            >
              <div
                class="chart-wrapper css-1hgbe7b"
              >
                <div
                  class="icon-center-wrapper MuiBox-root css-0"
                >
                  <div
                    class="ant-empty is-icon-tips css-19kysfv"
                  >
                    <div
                      class="ant-empty-image"
                    >
                      <svg
                        fill="none"
                        height="80"
                        viewBox="0 0 80 80"
                        width="80"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 58.5C8 62.6786 22.3 66 40 66C57.7 66 72 62.6786 72 58.5C72 54.3214 57.7 51 40 51C22.2999 51 8 54.3214 8 58.5Z"
                          fill="#EBEAE7"
                        />
                        <path
                          d="M54.1761 9.19916C53.4239 8.43216 52.3947 8 51.3204 8H21C18.7909 8 17 9.79086 17 12V56C17 58.2091 18.7909 60 21 60H59C61.2091 60 63 58.2091 63 56V19.8302C63 18.7828 62.5892 17.7772 61.8558 17.0294L54.1761 9.19916Z"
                          fill="#F2F1EF"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M16.3501 12.0001C16.3501 9.43197 18.432 7.3501 21.0001 7.3501H51.3204C52.5694 7.3501 53.7658 7.85248 54.6403 8.74413L54.1762 9.19926L54.6403 8.74413L62.3199 16.5744C63.1725 17.4437 63.6501 18.6127 63.6501 19.8303V56.0001C63.6501 58.5682 61.5682 60.6501 59.0001 60.6501H21.0001C18.432 60.6501 16.3501 58.5682 16.3501 56.0001V12.0001ZM21.0001 8.6501C19.1499 8.6501 17.6501 10.1499 17.6501 12.0001V56.0001C17.6501 57.8503 19.1499 59.3501 21.0001 59.3501H59.0001C60.8503 59.3501 62.3501 57.8503 62.3501 56.0001V19.8303C62.3501 18.9531 62.006 18.1109 61.3918 17.4846L53.7121 9.6544C53.0821 9.01203 52.2202 8.6501 51.3204 8.6501H21.0001Z"
                          fill="#E6E4E3"
                          fill-rule="evenodd"
                        />
                        <path
                          d="M52 12.4141C52 11.5232 53.0771 11.077 53.7071 11.707L59.2929 17.2928C59.9229 17.9228 59.4767 18.9999 58.5858 18.9999H53C52.4477 18.9999 52 18.5522 52 17.9999V12.4141Z"
                          fill="white"
                        />
                        <path
                          d="M60 42C55.0345 42 51 46.0345 51 51C51 55.9655 55.0345 60 60 60C64.9655 60 69 55.9655 69 51C69.3103 46.0345 65.2759 42 60 42Z"
                          fill="#F66074"
                        />
                        <path
                          d="M59.9998 45C60.7527 44.9945 61.5 45.6007 61.5 46.1623L61.1277 51.9757C61.1277 52.5374 60.6199 52.9979 59.9998 52.9979C59.3796 52.9979 58.8727 52.5383 58.8727 51.9757L58.5005 46.1623C58.5005 45.6007 59.0918 45.0205 59.9998 45ZM59.9998 56.9973C59.602 56.9973 59.2205 56.8392 58.9393 56.558C58.658 56.2767 58.5 55.8952 58.5 55.4975C58.5 55.0997 58.658 54.7182 58.9393 54.437C59.2205 54.1557 59.602 53.9977 59.9998 53.9977C60.3974 53.9977 60.7788 54.1557 61.0599 54.4368C61.3411 54.718 61.4991 55.0994 61.4991 55.497C61.4991 55.8947 61.3411 56.276 61.0599 56.5572C60.7788 56.8384 60.3974 56.9963 59.9998 56.9963V56.9973Z"
                          fill="white"
                        />
                        <path
                          d="M27 23C27 22.4477 27.4477 22 28 22H39C39.5523 22 40 22.4477 40 23V24C40 24.5523 39.5523 25 39 25H28C27.4477 25 27 24.5523 27 24V23Z"
                          fill="white"
                        />
                        <path
                          d="M27 32C27 31.4477 27.4477 31 28 31H52C52.5523 31 53 31.4477 53 32V33C53 33.5523 52.5523 34 52 34H28C27.4477 34 27 33.5523 27 33V32Z"
                          fill="white"
                        />
                        <path
                          d="M28 40C27.4477 40 27 40.4477 27 41V42C27 42.5523 27.4477 43 28 43H43C43.5523 43 44 42.5523 44 42V41C44 40.4477 43.5523 40 43 40H28Z"
                          fill="white"
                        />
                      </svg>
                    </div>
                    <div
                      class="ant-empty-description"
                    >
                      <span
                        class="no-data-cont"
                      >
                        Analysis failed
                      </span>
                    </div>
                    <div
                      class="ant-empty-footer"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="css-1xremcl"
          >
            <div
              class="steps-header"
            >
              <h5
                class="ant-typography"
              >
                使用了哪些优化规则？
              </h5>
              <span
                class="ant-typography ant-typography-secondary"
              >
                点击查看每个规则对 SQL 语句的影响
              </span>
            </div>
            <div
              class="steps-list"
            >
              <div
                class="step-item last-item"
              >
                <div
                  class="step-number"
                >
                  01
                </div>
                <div
                  class="step-content"
                >
                  <h4
                    class="step-title"
                  >
                    Index Optimization
                  </h4>
                  <div
                    aria-label="Add index for better performance"
                    class="ant-typography ant-typography-ellipsis ant-typography-single-line"
                  >
                    Add index for better performance
                    <span
                      aria-hidden="true"
                      style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
                    >
                      lg
                    </span>
                    <span
                      aria-hidden="true"
                      style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                    >
                      <span
                        aria-hidden="true"
                      >
                        ...
                      </span>
                      <a
                        aria-label="展开"
                        class="ant-typography-expand"
                      >
                        展开
                      </a>
                    </span>
                  </div>
                  <span
                    class="ant-tag ant-tag-green basic-tag-wrapper basic-small-tag-wrapper css-13qu6j1"
                  >
                    <svg
                      class="RocketFilled_svg__icon"
                      height="14"
                      viewBox="0 0 1024 1024"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M673.45 675.968s121.814-121.813 163.457-163.37c130.688-130.689 65.322-392.15 65.322-392.15S640.768 55.083 510.08 185.813c-97.707 97.707-162.816 164.992-162.816 164.992S183.296 316.501 85.248 414.55l522.88 522.88c98.048-98.048 65.323-261.461 65.323-261.461m-64.085-383.36a85.25 85.25 0 0 1 120.662 0 85.333 85.333 0 1 1-120.662 0m-482.688 602.07s128 0 213.334-85.334l-128-128c-85.334 42.667-85.334 213.333-85.334 213.333"
                        fill="#41BF9A"
                      />
                    </svg>
                    <span>
                      自动优化
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RightContent should render with horizontal layout by default 1`] = `
<body>
  <div>
    <div
      class="ant-col ant-col-8 css-18hn8eo"
      style="background: rgba(255, 255, 255, 0.7);"
    >
      <div
        class="ant-space ant-space-vertical"
      >
        <div
          class="ant-space-item"
          style="margin-bottom: 16px;"
        >
          <div
            class="ant-space ant-space-vertical"
          >
            <div
              class="ant-space-item"
              style="margin-bottom: 8px;"
            >
              <div
                class="css-19v9tj3"
              >
                <div
                  class="probability-number"
                  style="background-clip: text;"
                >
                  Best
                </div>
                <svg
                  height="30"
                  version="1.1"
                  width="30"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0 C3.61477175 1.49801352 5.68620463 3.57537417 8.25 6.5 C8.95640625 7.2940625 9.6628125 8.088125 10.390625 8.90625 C12 11 12 11 12 13 C10.8553125 13.0309375 10.8553125 13.0309375 9.6875 13.0625 C8.800625 13.371875 7.91375 13.68125 7 14 C5.95281202 16.31254012 4.95653635 18.6485148 4 21 C0.03489054 25.30497599 -3.40593489 25.62074135 -9 26 C-9 21.52386206 -8.51156813 21.31526994 -6 18 C-5.28566879 15.35065178 -5.28566879 15.35065178 -5 13 C-6.65 13 -8.3 13 -10 13 C-8.56501627 9.79111679 -6.78256013 7.42193016 -4.4375 4.8125 C-3.81746094 4.11769531 -3.19742187 3.42289062 -2.55859375 2.70703125 C-1.72141231 1.79011824 -0.8779528 0.8779528 0 0 Z "
                    fill="#FCAF19"
                    transform="translate(14,2)"
                  />
                </svg>
              </div>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="ant-typography ant-typography-secondary"
              >
                性能提升
              </span>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-bottom: 16px;"
        >
          <div
            class="analysis-chart"
          >
            <div
              class="css-1anu5"
            >
              <div
                class="chart-wrapper css-1hgbe7b"
              >
                <div
                  class="chart-box"
                >
                  <div
                    data-custom-params="{"data":[{"name":"performance","score":50,"type":"原文"},{"name":"performance","score":85,"type":"最终优化后"}],"xField":"name","yField":"score","seriesField":"type","meta":{"score":{"range":[0,1.1]}},"xAxis":{"line":null,"tickLine":null,"grid":{"line":{"style":{"lineWidth":1,"lineDash":null}}},"label":{"labelLineWidth":0,"labelDirection":"negative"}},"yAxis":{"line":null,"label":null},"area":{"style":{"fillOpacity":0.15}},"tooltip":{},"legend":false,"smooth":true}"
                    data-testid="mock-antd-plots"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="css-1xremcl"
          >
            <div
              class="steps-header"
            >
              <h5
                class="ant-typography"
              >
                使用了哪些优化规则？
              </h5>
              <span
                class="ant-typography ant-typography-secondary"
              >
                点击查看每个规则对 SQL 语句的影响
              </span>
            </div>
            <div
              class="steps-list"
            >
              <div
                class="step-item last-item"
              >
                <div
                  class="step-number"
                >
                  01
                </div>
                <div
                  class="step-content"
                >
                  <h4
                    class="step-title"
                  >
                    Index Optimization
                  </h4>
                  <div
                    aria-label="Add index for better performance"
                    class="ant-typography ant-typography-ellipsis ant-typography-single-line"
                  >
                    Add index for better performance
                    <span
                      aria-hidden="true"
                      style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
                    >
                      lg
                    </span>
                    <span
                      aria-hidden="true"
                      style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                    >
                      <span
                        aria-hidden="true"
                      >
                        ...
                      </span>
                      <a
                        aria-label="展开"
                        class="ant-typography-expand"
                      >
                        展开
                      </a>
                    </span>
                  </div>
                  <span
                    class="ant-tag ant-tag-green basic-tag-wrapper basic-small-tag-wrapper css-13qu6j1"
                  >
                    <svg
                      class="RocketFilled_svg__icon"
                      height="14"
                      viewBox="0 0 1024 1024"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M673.45 675.968s121.814-121.813 163.457-163.37c130.688-130.689 65.322-392.15 65.322-392.15S640.768 55.083 510.08 185.813c-97.707 97.707-162.816 164.992-162.816 164.992S183.296 316.501 85.248 414.55l522.88 522.88c98.048-98.048 65.323-261.461 65.323-261.461m-64.085-383.36a85.25 85.25 0 0 1 120.662 0 85.333 85.333 0 1 1-120.662 0m-482.688 602.07s128 0 213.334-85.334l-128-128c-85.334 42.667-85.334 213.333-85.334 213.333"
                        fill="#41BF9A"
                      />
                    </svg>
                    <span>
                      自动优化
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RightContent should render with horizontal layout when isVerticalLayout is false 1`] = `
<body>
  <div>
    <div
      class="ant-col ant-col-8 css-18hn8eo"
      style="background: rgba(255, 255, 255, 0.7);"
    >
      <div
        class="ant-space ant-space-vertical"
      >
        <div
          class="ant-space-item"
          style="margin-bottom: 16px;"
        >
          <div
            class="ant-space ant-space-vertical"
          >
            <div
              class="ant-space-item"
              style="margin-bottom: 8px;"
            >
              <div
                class="css-19v9tj3"
              >
                <div
                  class="probability-number"
                  style="background-clip: text;"
                >
                  Best
                </div>
                <svg
                  height="30"
                  version="1.1"
                  width="30"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0 C3.61477175 1.49801352 5.68620463 3.57537417 8.25 6.5 C8.95640625 7.2940625 9.6628125 8.088125 10.390625 8.90625 C12 11 12 11 12 13 C10.8553125 13.0309375 10.8553125 13.0309375 9.6875 13.0625 C8.800625 13.371875 7.91375 13.68125 7 14 C5.95281202 16.31254012 4.95653635 18.6485148 4 21 C0.03489054 25.30497599 -3.40593489 25.62074135 -9 26 C-9 21.52386206 -8.51156813 21.31526994 -6 18 C-5.28566879 15.35065178 -5.28566879 15.35065178 -5 13 C-6.65 13 -8.3 13 -10 13 C-8.56501627 9.79111679 -6.78256013 7.42193016 -4.4375 4.8125 C-3.81746094 4.11769531 -3.19742187 3.42289062 -2.55859375 2.70703125 C-1.72141231 1.79011824 -0.8779528 0.8779528 0 0 Z "
                    fill="#FCAF19"
                    transform="translate(14,2)"
                  />
                </svg>
              </div>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="ant-typography ant-typography-secondary"
              >
                性能提升
              </span>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-bottom: 16px;"
        >
          <div
            class="analysis-chart"
          >
            <div
              class="css-1anu5"
            >
              <div
                class="chart-wrapper css-1hgbe7b"
              >
                <div
                  class="chart-box"
                >
                  <div
                    data-custom-params="{"data":[{"name":"performance","score":50,"type":"原文"},{"name":"performance","score":85,"type":"最终优化后"}],"xField":"name","yField":"score","seriesField":"type","meta":{"score":{"range":[0,1.1]}},"xAxis":{"line":null,"tickLine":null,"grid":{"line":{"style":{"lineWidth":1,"lineDash":null}}},"label":{"labelLineWidth":0,"labelDirection":"negative"}},"yAxis":{"line":null,"label":null},"area":{"style":{"fillOpacity":0.15}},"tooltip":{},"legend":false,"smooth":true}"
                    data-testid="mock-antd-plots"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="css-1xremcl"
          >
            <div
              class="steps-header"
            >
              <h5
                class="ant-typography"
              >
                使用了哪些优化规则？
              </h5>
              <span
                class="ant-typography ant-typography-secondary"
              >
                点击查看每个规则对 SQL 语句的影响
              </span>
            </div>
            <div
              class="steps-list"
            >
              <div
                class="step-item last-item"
              >
                <div
                  class="step-number"
                >
                  01
                </div>
                <div
                  class="step-content"
                >
                  <h4
                    class="step-title"
                  >
                    Index Optimization
                  </h4>
                  <div
                    aria-label="Add index for better performance"
                    class="ant-typography ant-typography-ellipsis ant-typography-single-line"
                  >
                    Add index for better performance
                    <span
                      aria-hidden="true"
                      style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
                    >
                      lg
                    </span>
                    <span
                      aria-hidden="true"
                      style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                    >
                      <span
                        aria-hidden="true"
                      >
                        ...
                      </span>
                      <a
                        aria-label="展开"
                        class="ant-typography-expand"
                      >
                        展开
                      </a>
                    </span>
                  </div>
                  <span
                    class="ant-tag ant-tag-green basic-tag-wrapper basic-small-tag-wrapper css-13qu6j1"
                  >
                    <svg
                      class="RocketFilled_svg__icon"
                      height="14"
                      viewBox="0 0 1024 1024"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M673.45 675.968s121.814-121.813 163.457-163.37c130.688-130.689 65.322-392.15 65.322-392.15S640.768 55.083 510.08 185.813c-97.707 97.707-162.816 164.992-162.816 164.992S183.296 316.501 85.248 414.55l522.88 522.88c98.048-98.048 65.323-261.461 65.323-261.461m-64.085-383.36a85.25 85.25 0 0 1 120.662 0 85.333 85.333 0 1 1-120.662 0m-482.688 602.07s128 0 213.334-85.334l-128-128c-85.334 42.667-85.334 213.333-85.334 213.333"
                        fill="#41BF9A"
                      />
                    </svg>
                    <span>
                      自动优化
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RightContent should render with optimizeSteps is empty 1`] = `
<body>
  <div>
    <div
      class="ant-col ant-col-8 css-18hn8eo"
      style="background: rgba(255, 255, 255, 0.7);"
    >
      <div
        class="ant-space ant-space-vertical"
      >
        <div
          class="ant-space-item"
          style="margin-bottom: 16px;"
        >
          <div
            class="ant-space ant-space-vertical"
          >
            <div
              class="ant-space-item"
              style="margin-bottom: 8px;"
            >
              <div
                class="css-19v9tj3"
              >
                <div
                  class="probability-number"
                  style="background-clip: text;"
                >
                  Best
                </div>
                <svg
                  height="30"
                  version="1.1"
                  width="30"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0 C3.61477175 1.49801352 5.68620463 3.57537417 8.25 6.5 C8.95640625 7.2940625 9.6628125 8.088125 10.390625 8.90625 C12 11 12 11 12 13 C10.8553125 13.0309375 10.8553125 13.0309375 9.6875 13.0625 C8.800625 13.371875 7.91375 13.68125 7 14 C5.95281202 16.31254012 4.95653635 18.6485148 4 21 C0.03489054 25.30497599 -3.40593489 25.62074135 -9 26 C-9 21.52386206 -8.51156813 21.31526994 -6 18 C-5.28566879 15.35065178 -5.28566879 15.35065178 -5 13 C-6.65 13 -8.3 13 -10 13 C-8.56501627 9.79111679 -6.78256013 7.42193016 -4.4375 4.8125 C-3.81746094 4.11769531 -3.19742187 3.42289062 -2.55859375 2.70703125 C-1.72141231 1.79011824 -0.8779528 0.8779528 0 0 Z "
                    fill="#FCAF19"
                    transform="translate(14,2)"
                  />
                </svg>
              </div>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="ant-typography ant-typography-secondary"
              >
                性能提升
              </span>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-bottom: 16px;"
        >
          <div
            class="analysis-chart"
          >
            <div
              class="css-1anu5"
            >
              <div
                class="chart-wrapper css-1hgbe7b"
              >
                <div
                  class="chart-box"
                >
                  <div
                    data-custom-params="{"data":[{"name":"performance","score":50,"type":"原文"},{"name":"performance","score":85,"type":"最终优化后"}],"xField":"name","yField":"score","seriesField":"type","meta":{"score":{"range":[0,1.1]}},"xAxis":{"line":null,"tickLine":null,"grid":{"line":{"style":{"lineWidth":1,"lineDash":null}}},"label":{"labelLineWidth":0,"labelDirection":"negative"}},"yAxis":{"line":null,"label":null},"area":{"style":{"fillOpacity":0.15}},"tooltip":{},"legend":false,"smooth":true}"
                    data-testid="mock-antd-plots"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`RightContent should render with totalAnalysis detail is empty 1`] = `
<body>
  <div>
    <div
      class="ant-col ant-col-8 css-18hn8eo"
      style="background: rgba(255, 255, 255, 0.7);"
    >
      <div
        class="ant-space ant-space-vertical"
      >
        <div
          class="ant-space-item"
          style="margin-bottom: 16px;"
        >
          <div
            class="ant-space ant-space-vertical"
          >
            <div
              class="ant-space-item"
              style="margin-bottom: 8px;"
            >
              <div
                class="css-19v9tj3"
              >
                <div
                  class="probability-number"
                  style="background-clip: text;"
                >
                  Best
                </div>
                <svg
                  height="30"
                  version="1.1"
                  width="30"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0 C3.61477175 1.49801352 5.68620463 3.57537417 8.25 6.5 C8.95640625 7.2940625 9.6628125 8.088125 10.390625 8.90625 C12 11 12 11 12 13 C10.8553125 13.0309375 10.8553125 13.0309375 9.6875 13.0625 C8.800625 13.371875 7.91375 13.68125 7 14 C5.95281202 16.31254012 4.95653635 18.6485148 4 21 C0.03489054 25.30497599 -3.40593489 25.62074135 -9 26 C-9 21.52386206 -8.51156813 21.31526994 -6 18 C-5.28566879 15.35065178 -5.28566879 15.35065178 -5 13 C-6.65 13 -8.3 13 -10 13 C-8.56501627 9.79111679 -6.78256013 7.42193016 -4.4375 4.8125 C-3.81746094 4.11769531 -3.19742187 3.42289062 -2.55859375 2.70703125 C-1.72141231 1.79011824 -0.8779528 0.8779528 0 0 Z "
                    fill="#FCAF19"
                    transform="translate(14,2)"
                  />
                </svg>
              </div>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="ant-typography ant-typography-secondary"
              >
                性能提升
              </span>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-bottom: 16px;"
        >
          <div
            class="analysis-chart"
          >
            <svg
              class="icon"
              height="60"
              p-id="10029"
              version="1.1"
              viewBox="0 0 1024 1024"
              width="60"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M316.26615847 393.13534991l-171.08627078 431.74650593c-4.47869794 11.46546674 6.80762185 22.93093497 18.27308861 18.2730886l431.74650593-173.23604626c9.49483971-3.76210707 11.82376365-15.94416613 4.65784637-23.11008192L339.37624189 388.29835655c-7.16591726-7.16591726-19.34797634-4.65784638-23.11008342 4.83699336z"
                fill="#FFB20D"
                p-id="10030"
              />
              <path
                d="M217.55565124 555.4433718m-33.14236701 0a33.14236701 33.14236701 0 1 0 66.28473401 0 33.14236701 33.14236701 0 1 0-66.28473401 0Z"
                fill="#9D11F9"
                p-id="10031"
              />
              <path
                d="M233.32066894 319.6847001m-34.9338456 0a34.93384558 34.93384558 0 1 0 69.86769118 0 34.93384558 34.93384558 0 1 0-69.86769118 0Z"
                fill="#3880F2"
                p-id="10032"
              />
              <path
                d="M547.72528216 224.19885461m-30.27600068 0a30.27599921 30.27599921 0 1 0 60.55199989 0 30.27599921 30.27599921 0 1 0-60.55199989 0Z"
                fill="#F44A49"
                p-id="10033"
              />
              <path
                d="M771.66019169 789.94801026m-65.38899472 0a65.38899325 65.38899325 0 1 0 130.77798796 0 65.38899325 65.38899325 0 1 0-130.77798796 0Z"
                fill="#47D8AB"
                p-id="10034"
              />
              <path
                d="M799.60726845 501.34069831m-37.26276951 0a37.2627695 37.2627695 0 1 0 74.52553754 0 37.2627695 37.2627695 0 1 0-74.52553754 0Z"
                fill="#F44A49"
                p-id="10035"
              />
              <path
                d="M653.78085511 493.27904176m-29.20111295 0a29.20111148 29.20111148 0 1 0 58.40222441 0 29.20111148 29.20111148 0 1 0-58.40222441 0Z"
                fill="#F44A49"
                p-id="10036"
              />
              <path
                d="M354.42466728 492.02500559c-5.55358566 0-11.10717133-2.5080709-14.69012999-7.16591728-6.27017797-8.06165655-4.83699334-19.8854202 3.40381166-26.15559673 46.04101693-35.47128945 69.68854421-74.52553756 70.40513506-115.72956109 1.25403617-73.80894671-70.22598806-134.00264972-70.94257891-134.71924204-7.88250812-6.6284734-8.95739584-18.27308859-2.5080709-26.15559668 6.6284734-7.88250812 18.27308859-8.95739584 26.15559672-2.50807091 3.58295863 2.86636631 85.81185733 72.01746666 84.37867415 163.74120505-0.89573929 53.20693419-29.38025991 101.93517044-84.91611804 144.75152561-3.22466321 2.68721935-7.34506572 3.94125405-11.28631975 3.94125407z"
                fill="#3880F2"
                p-id="10037"
              />
              <path
                d="M374.31008748 669.02315889c-4.65784638 0-9.1365443-1.79147858-12.89864991-5.01614178-7.52421269-7.16591726-7.70336114-18.81053247-0.71659233-26.33474517 1.61233162-1.79147858 161.23313563-166.24927742 356.32522763-27.94707675 8.41995199 5.91188108 10.39058049 17.55649628 4.47869793 25.97644826-5.91188108 8.41995199-17.55649628 10.39058049-25.97644826 4.4786994-169.11564374-119.84996362-302.04340571 17.3773493-307.59699284 23.28923039-3.76210707 3.58295863-8.77824887 5.55358566-13.61524222 5.55358565z"
                fill="#F44A49"
                p-id="10038"
              />
              <path
                d="M626.01292532 382.56562244h-78.28764316c-10.21143205 0-18.63138402-8.41995199-18.6313855-18.63138401s8.41995199-18.63138402 18.6313855-18.6313855h78.28764316c20.96030794 0 38.15850879-17.01905241 38.1585088-38.1585088v-37.8002119c0-41.56231899 33.85895785-75.42127683 75.4212783-75.42127831 17.73564473 0 33.50066243-12.5403545 37.26276803-30.09685077l4.4786994-20.60201252c2.14977548-10.03228359 12.00291061-16.48161002 22.21434266-14.15268608 10.03228359 2.14977548 16.48161002 12.18205906 14.15268609 22.21434264l-4.47869793 20.60201252c-7.52421269 34.39640172-38.51680422 59.29796371-73.62979825 59.29796372-20.96030794 0-38.15850879 17.01905241-38.15850879 38.1585088v37.8002119c0 41.56231899-33.67981087 75.42127683-75.42127831 75.42127831z"
                fill="#FFB20D"
                p-id="10039"
              />
            </svg>
            <span>
              恭喜！ 您的SQL查询配置已经非常优秀，无需进一步优化。
            </span>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="css-1xremcl"
          >
            <div
              class="steps-header"
            >
              <h5
                class="ant-typography"
              >
                使用了哪些优化规则？
              </h5>
              <span
                class="ant-typography ant-typography-secondary"
              >
                点击查看每个规则对 SQL 语句的影响
              </span>
            </div>
            <div
              class="steps-list"
            >
              <div
                class="step-item last-item"
              >
                <div
                  class="step-number"
                >
                  01
                </div>
                <div
                  class="step-content"
                >
                  <h4
                    class="step-title"
                  >
                    Index Optimization
                  </h4>
                  <div
                    aria-label="Add index for better performance"
                    class="ant-typography ant-typography-ellipsis ant-typography-single-line"
                  >
                    Add index for better performance
                    <span
                      aria-hidden="true"
                      style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
                    >
                      lg
                    </span>
                    <span
                      aria-hidden="true"
                      style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                    >
                      <span
                        aria-hidden="true"
                      >
                        ...
                      </span>
                      <a
                        aria-label="展开"
                        class="ant-typography-expand"
                      >
                        展开
                      </a>
                    </span>
                  </div>
                  <span
                    class="ant-tag ant-tag-green basic-tag-wrapper basic-small-tag-wrapper css-13qu6j1"
                  >
                    <svg
                      class="RocketFilled_svg__icon"
                      height="14"
                      viewBox="0 0 1024 1024"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M673.45 675.968s121.814-121.813 163.457-163.37c130.688-130.689 65.322-392.15 65.322-392.15S640.768 55.083 510.08 185.813c-97.707 97.707-162.816 164.992-162.816 164.992S183.296 316.501 85.248 414.55l522.88 522.88c98.048-98.048 65.323-261.461 65.323-261.461m-64.085-383.36a85.25 85.25 0 0 1 120.662 0 85.333 85.333 0 1 1-120.662 0m-482.688 602.07s128 0 213.334-85.334l-128-128c-85.334 42.667-85.334 213.333-85.334 213.333"
                        fill="#41BF9A"
                      />
                    </svg>
                    <span>
                      自动优化
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RightContent should render with vertical layout when isVerticalLayout is true 1`] = `
<body>
  <div>
    <div
      class="ant-col ant-col-24 css-18hn8eo"
      style="background: rgba(255, 255, 255, 0.7);"
    >
      <div
        class="ant-space ant-space-vertical"
      >
        <div
          class="ant-space-item"
          style="margin-bottom: 16px;"
        >
          <div
            class="ant-space ant-space-vertical"
          >
            <div
              class="ant-space-item"
              style="margin-bottom: 8px;"
            >
              <div
                class="css-19v9tj3"
              >
                <div
                  class="probability-number"
                  style="background-clip: text;"
                >
                  Best
                </div>
                <svg
                  height="30"
                  version="1.1"
                  width="30"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0 C3.61477175 1.49801352 5.68620463 3.57537417 8.25 6.5 C8.95640625 7.2940625 9.6628125 8.088125 10.390625 8.90625 C12 11 12 11 12 13 C10.8553125 13.0309375 10.8553125 13.0309375 9.6875 13.0625 C8.800625 13.371875 7.91375 13.68125 7 14 C5.95281202 16.31254012 4.95653635 18.6485148 4 21 C0.03489054 25.30497599 -3.40593489 25.62074135 -9 26 C-9 21.52386206 -8.51156813 21.31526994 -6 18 C-5.28566879 15.35065178 -5.28566879 15.35065178 -5 13 C-6.65 13 -8.3 13 -10 13 C-8.56501627 9.79111679 -6.78256013 7.42193016 -4.4375 4.8125 C-3.81746094 4.11769531 -3.19742187 3.42289062 -2.55859375 2.70703125 C-1.72141231 1.79011824 -0.8779528 0.8779528 0 0 Z "
                    fill="#FCAF19"
                    transform="translate(14,2)"
                  />
                </svg>
              </div>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                class="ant-typography ant-typography-secondary"
              >
                性能提升
              </span>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
          style="margin-bottom: 16px;"
        >
          <div
            class="analysis-chart"
          >
            <div
              class="css-1anu5"
            >
              <div
                class="chart-wrapper css-1hgbe7b"
              >
                <div
                  class="chart-box"
                >
                  <div
                    data-custom-params="{"data":[{"name":"performance","score":50,"type":"原文"},{"name":"performance","score":85,"type":"最终优化后"}],"xField":"name","yField":"score","seriesField":"type","meta":{"score":{"range":[0,1.1]}},"xAxis":{"line":null,"tickLine":null,"grid":{"line":{"style":{"lineWidth":1,"lineDash":null}}},"label":{"labelLineWidth":0,"labelDirection":"negative"}},"yAxis":{"line":null,"label":null},"area":{"style":{"fillOpacity":0.15}},"tooltip":{},"legend":false,"smooth":true}"
                    data-testid="mock-antd-plots"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="css-1xremcl"
          >
            <div
              class="steps-header"
            >
              <h5
                class="ant-typography"
              >
                使用了哪些优化规则？
              </h5>
              <span
                class="ant-typography ant-typography-secondary"
              >
                点击查看每个规则对 SQL 语句的影响
              </span>
            </div>
            <div
              class="steps-list"
            >
              <div
                class="step-item last-item"
              >
                <div
                  class="step-number"
                >
                  01
                </div>
                <div
                  class="step-content"
                >
                  <h4
                    class="step-title"
                  >
                    Index Optimization
                  </h4>
                  <div
                    aria-label="Add index for better performance"
                    class="ant-typography ant-typography-ellipsis ant-typography-single-line"
                  >
                    Add index for better performance
                    <span
                      aria-hidden="true"
                      style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
                    >
                      lg
                    </span>
                    <span
                      aria-hidden="true"
                      style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                    >
                      <span
                        aria-hidden="true"
                      >
                        ...
                      </span>
                      <a
                        aria-label="展开"
                        class="ant-typography-expand"
                      >
                        展开
                      </a>
                    </span>
                  </div>
                  <span
                    class="ant-tag ant-tag-green basic-tag-wrapper basic-small-tag-wrapper css-13qu6j1"
                  >
                    <svg
                      class="RocketFilled_svg__icon"
                      height="14"
                      viewBox="0 0 1024 1024"
                      width="14"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M673.45 675.968s121.814-121.813 163.457-163.37c130.688-130.689 65.322-392.15 65.322-392.15S640.768 55.083 510.08 185.813c-97.707 97.707-162.816 164.992-162.816 164.992S183.296 316.501 85.248 414.55l522.88 522.88c98.048-98.048 65.323-261.461 65.323-261.461m-64.085-383.36a85.25 85.25 0 0 1 120.662 0 85.333 85.333 0 1 1-120.662 0m-482.688 602.07s128 0 213.334-85.334l-128-128c-85.334 42.667-85.334 213.333-85.334 213.333"
                        fill="#41BF9A"
                      />
                    </svg>
                    <span>
                      自动优化
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
